--- a/JOST-Box/index.html
+++ b/JOST-Box/index.html
@@ -42,6 +42,11 @@
             <h2 id="question-text"></h2>
             <input type="text" id="answer-input" placeholder="Your Answer">
             <button id="submit-answer-btn">Submit</button>
+            <div id="voting-section" class="hidden">
+                <h3>Vote for the best answer</h3>
+                <p class="helper-text">You cannot vote for your own answer.</p>
+                <ul id="voting-options"></ul>
+            </div>
         </div>
 
         <!-- Game Page (Host) -->
@@ -49,7 +54,9 @@
             <h2 id="host-question-text"></h2>
             <h3>Answers:</h3>
             <ul id="host-answer-list"></ul>
-            <button id="next-question-btn">Next Question</button>
+            <button id="open-voting-btn">Open Voting</button>
+            <button id="close-round-btn" class="hidden">Finish Round</button>
+            <button id="next-question-btn" class="hidden">Next Question</button>
         </div>
 
         <!-- Results Page -->
@@ -57,6 +64,7 @@
             <h2>Game Over!</h2>
             <h3>Final Scores:</h3>
             <ul id="results-list"></ul>
+            <button id="close-game-btn">Close Game</button>
         </div>
     </div>
 
