--- a/JOST-Box/index.html
+++ b/JOST-Box/index.html
@@ -11,6 +11,7 @@
             <h1>Welcome to JOST-Box!</h1>
             <button id="host-btn">Host a Game</button>
             <button id="join-btn">Join a Game</button>
+            <a href="about.html" class="about-link"><button>About</button></a>
         </div>
 
         <!-- Host Game Page -->
@@ -72,7 +73,6 @@
             <h3>Final Scores:</h3>
             <ul id="results-list"></ul>
             <button id="close-game-btn">Close Game</button>
-        </div>
     </div>
     <script src="questionBanks.js"></script>
     <script src="app.js"></script>
