--- a/JOST-Box/index.html
+++ b/JOST-Box/index.html
@@ -5,6 +5,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <audio id="vote-end-sound" preload="auto">
+        <source src="sounds/ding.mp3" type="audio/mpeg">
+    </audio>
     <div id="app">
         <!-- Home Page -->
         <div id="home-page">
