--- a/JOST-Box/index.html
+++ b/JOST-Box/index.html
@@ -75,9 +75,12 @@
             <h2>Game Over!</h2>
             <h3>Final Scores:</h3>
             <ul id="results-list"></ul>
+            <h3>Performance Chart:</h3>
+            <canvas id="grade-chart" width="400" height="200"></canvas>
             <button id="close-game-btn">Close Game</button>
     </div>
     <script src="questionBanks.js"></script>
     <script src="app.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </body>
 </html>
