Added the lang attribute to make sure the website is in English.

--- a/JOST-Box/about.html
+++ b/JOST-Box/about.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <title>About - JOST-Box</title>
     <link rel="stylesheet" href="style.css">
