Correctly added labels

--- a/index.html
+++ b/index.html
@@ -27,7 +27,10 @@
                 </select>
                 <button id="load-bank-btn">Load Questions</button>
             </div>
-            <label> <textarea id="questions-input" placeholder="Enter your questions here, one per line. Format: Question|Answer"></textarea> </label>
+            <label>
+              Questions
+              <textarea id="questions-input" placeholder="Enter your questions here, one per line. Format: Question|Answer"></textarea>
+            </label>
             <button id="create-game-btn">Create Game</button>
         </div>
 
@@ -43,15 +46,18 @@
         <!-- Join Game Page -->
         <div id="join-page" class="hidden">
             <h2>Join a Game</h2>
-            <label> <input type="text" id="pin-input" placeholder="Enter Game PIN"> </label>
-            <label> <input type="text" id="name-input" placeholder="Enter Your Name"> </label>
+            <label> for="pin-input">Game PIN</label>
+            <input type="text" id="pin-input" placeholder="Enter Game PIN"> 
+            <label> for="name-input">Your Name</label>
+            <input type="text" id="name-input" placeholder="Enter Your Name">
             <button id="join-game-btn">Join</button>
         </div>
 
         <!-- Game Page (Player) -->
         <div id="game-page-player" class="hidden">
             <h2 id="question-text"></h2>
-           <label> <input type="text" id="answer-input" placeholder="Your Answer"> </label> 
+           <label> for="answer-input">Your Answer</label>
+             <input type="text" id="answer-input" placeholder="Your Answer"> 
             <button id="submit-answer-btn">Submit</button>
             <div id="voting-section" class="hidden">
                 <h3>Vote for the best answer</h3>
