--- a/index.html
+++ b/index.html
@@ -46,18 +46,24 @@
         <!-- Join Game Page -->
         <div id="join-page" class="hidden">
             <h2>Join a Game</h2>
-            <label> for="pin-input">Game PIN</label>
-            <input type="text" id="pin-input" placeholder="Enter Game PIN"> 
-            <label> for="name-input">Your Name</label>
-            <input type="text" id="name-input" placeholder="Enter Your Name">
+            <label>
+              Game PIN
+             <input type="text" id="pin-input" placeholder="Enter Game PIN"> 
+           </label>
+            <label>
+              Your Name
+             <input type="text" id="name-input" placeholder="Enter Your Name">
+            </label>
             <button id="join-game-btn">Join</button>
         </div>
 
         <!-- Game Page (Player) -->
         <div id="game-page-player" class="hidden">
             <h2 id="question-text"></h2>
-           <label> for="answer-input">Your Answer</label>
+           <label>
+             Your Answer
              <input type="text" id="answer-input" placeholder="Your Answer"> 
+          </label>
             <button id="submit-answer-btn">Submit</button>
             <div id="voting-section" class="hidden">
                 <h3>Vote for the best answer</h3>
