Changed the headers for the game pages for the host and players to have a placeholder text.

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
         <!-- Game Page (Player) -->
         <div id="game-page-player" class="hidden">
-            <h2 id="question-text"></h2>
+            <h2 id="question-text">placeholder</h2>
            <label>
              Your Answer
              <input type="text" id="answer-input" placeholder="Your Answer"> 
@@ -74,7 +74,7 @@
 
         <!-- Game Page (Host) -->
         <div id="game-page-host" class="hidden">
-            <h2 id="host-question-text"></h2>
+            <h2 id="host-question-text">placeholder</h2>
             <h3>Answers:</h3>
             <ul id="host-answer-list"></ul>
             <button id="open-voting-btn">Open Voting</button>
