Removed the label name for the questions input.

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 </select>
                 <button id="load-bank-btn">Load Questions</button>
             </div>
-            <label for="question-bank-input">
+            <label>
               Questions
               <textarea id="questions-input" placeholder="Enter your questions here, one per line. Format: Question|Answer"></textarea>
             </label>
